nc use fixed visibility

--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -820,9 +820,9 @@
             map.setLayoutProperty('Usable-Open-Space', 'visibility', 'none');
             // map.setLayoutProperty('Too-Little-Setback', 'visibility', 'none');
             // map.setLayoutProperty('Zones', 'visibility', 'none');
-            // map.setLayoutProperty('Overlay', 'visibility', 'none');
             map.setLayoutProperty('Uses', 'visibility', 'none');
             map.setLayoutProperty('Variances', 'visibility', 'none');
+            map.setLayoutProperty('Nonconforming-Use', 'visibility', 'none');
             
             // Set all overlay layers to none initially
             map.setLayoutProperty('Overlays-High-Rise-Fill', 'visibility', 'none');
